...

struct CollectionFormView: View {
    @Environment(\.presentationMode) var presentationMode
    @EnvironmentObject var Controller: StoreAirQuotes

    // MARK: Form States
    @State private var collectionName = ""
    @State private var chosenColor = "TagRed"
    @State private var chosenIcon: String = "quote.opening"
    
    var onSubmitSuccess: ((_ folder: Folder) -> Void)?
    
    init(onSubmitSuccess: ((_ folder: Folder) -> Void)? = nil) {
...
                Section(header: Text("Icon")) {
                    IconSelectionView(chosenIcon: $chosenIcon)
                }
            }
            .navigationTitle("New Collection")
            .navigationBarTitleDisplayMode(.inline)
            .navigationBarItems(leading: CancelButton(), trailing: DoneButton().accessibilityIdentifier("collectionDoneButton3")

            )
        }
    }
    
    //MARK: - Navigation Bar Buttons
...
