...
                        Image(systemName: "plus")
                            .foregroundColor(colorScheme == .dark ? Color.black : Color.white)
                            .font(.system(size: 30))
                    }
                    .offset(y: -32)
            }
            .accessibilityIdentifier("addButton")
            
            Spacer()
            tabButton(.browse, icon: "books.vertical.fill")
            Spacer()
            
        }
...
